Fix card name overflow

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -59,8 +59,8 @@
   float: left;
   font-weight: 600;
   margin-top: 10px;
-  max-height: 20px;
-  max-width: 170px;
+  max-height: 30px;
+  max-width: 150px;
   overflow: hidden;
   text-align: left;
   text-overflow: ellipsis;
